Tenho que revisar

--- a/_modelo.html
+++ b/_modelo.html
@@ -13,13 +13,13 @@
     <div id="wrap">
 
         <header>
-
+            <div>
             <a href="/">
-                <img src="img/logo.png" alt="Logotipo do Meu Blog Estático">
+                <img src="img/logo-removebg-preview (3).png" alt="Logotipo do Meu Blog Estático">
             </a>
 
             <h1>Meu Blog Estático</h1>
-
+        </div>
             <!-- Formulário de pesquisa -->
             <form action="https://www.google.com/search" method="get">
 
@@ -51,7 +51,7 @@
             </a>
 
             <a href="login.html" id="interacaoUsuario">
-                <img src="img/pessoa.png" alt="faça login">
+                <img src="img/pessoa-removebg-preview.png   " alt="faça login">
                 <span>Faça login</span>
             </a>
 
